--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+eframe = { version = "0.27", default-features = false, features = [
+    "default_fonts",
+    "glow",
+] }
