--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1"
 eframe = { version = "0.27", default-features = false, features = [
     "default_fonts",
     "glow",
 ] }
+serde = { version = "1", features = ["derive"] }
+toml = "0.8"
