--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,7 @@ eframe = { version = "0.27", default-features = false, features = [
     "default_fonts",
     "glow",
 ] }
+env_logger = "0.11.3"
+log = "0.4.21"
 serde = { version = "1", features = ["derive"] }
 toml = "0.8"
