Invoke discover_ae_app_dirs from front-end

--- a/src-web/package.json
+++ b/src-web/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tauri-apps/api": "^1.5.6",
     "solid-js": "^1.8.15"
   },
   "devDependencies": {
